# livekit-two

agent-ui/: .env.example  package-lock.json  package.json
agent-ui/app/api/connection-details/: route.ts
outbound/: .env.example  README.md  app-config.ts  package-lock.json  package.json
outbound/app/: layout.tsx
outbound/app/(app)/: layout.tsx
outbound/app/api/connection-details/: route.ts
outbound/app/api/delete-room/: route.ts
outbound/app/components/: layout.tsx
outbound/app/components/livekit/: page.tsx
outbound/components/: app.tsx  session-view.tsx  welcome.tsx
outbound/components/livekit/: dtmf-keypad.tsx  sip-control-bar.tsx
outbound/hooks/: useConnectionDetails.ts  useSipControlBar.ts
outbound/lib/: utils.ts
outbound_agent/: .env.example  README.md  agent.py  dispatch.py
python/: .env.example  .gitignore  README.md  agent.py  config.py  pyproject.toml
python/core/clients/: __init__.py  backend.py  openai.py
python/core/logging/: handler.py  logger.py
python/core/models/: __init__.py  models.py
python/core/services/: __init__.py  knowledge_base.py  session.py
python/core/utils/: json_serialize.py
